fix the navbar on mobile version

--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,5 @@
 html{
   background-color: #404040;
   font-family: 'Josefin Sans', sans-serif;
+  scroll-behavior: smooth;
 }
